@@ -1,5 +1,6 @@
 VERSION 2.5 - TBD
 =================
+2006-08 - ipproto type: fixed printing as text instead of numeric (e.g. tcp instead of 6), added double field
 2006-08 - sort module now sorts numerically whenever possible, handles multiple dimensions better, -r for reverse order
 2006-07 - new modules: take, deskew
 2006-07 - Date/Time parsers now support Unix epoch time strings
